refactor: update homepage copy

--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Luis Cadillo - Software Developer</title>
+		<title>Luis Cadillo | Software Developer</title>
         <!-- TODO: fix meta -->
         <!-- <link rel="manifest" crossorigin="use-credentials" href="/manifest.webmanifest" /> -->
         <!-- <link rel="alternate" type="application/feed+json" href="/feed.json" /> -->
